test/fail/ok/non-persistent.tc-human.ok
error[M0219]: this declaration is currently implicitly transient, please declare it explicitly `transient`
    ┌─ non-persistent.mo:3:3
  3 │    let _x = #x; // error
    │    ^^^^^^^^^^^ 
error[M0219]: this declaration is currently implicitly transient, please declare it explicitly `transient`
    ┌─ non-persistent.mo:4:3
  4 │    var _y = #y; // error
    │    ^^^^^^^^^^^ 
error[M0219]: this declaration is currently implicitly transient, please declare it explicitly `transient`
    ┌─ non-persistent.mo:9:3
  9 │    object _O = {}; // error
    │    ^^^^^^^^^^^^^^ 
